--- a/reservation-system/public/index.html
+++ b/reservation-system/public/index.html
@@ -22,6 +22,8 @@
                 <div class="menu_link">
                     <a href="index.html">Accueil</a>
                     <a href="reserv.html">Reservation</a>
+                    <a href="admin.html">Admin</a>
+                    <a href="login.html">connexion</a>
                     <a href="mailto: kyllian.phaeton@gmail.com" class="contact-button">Contactez-nous</a>
 
                 </div>
